--- a/library.bib
+++ b/library.bib
@@ -21,6 +21,23 @@
   MRNUMBER = {4734965},
 }
 
+@article {ANN,
+    AUTHOR = {Andoni, A. and Naor, A. and Neiman, O.},
+     TITLE = {Snowflake universality of {W}asserstein spaces},
+   JOURNAL = {Ann. Sci. \'Ec. Norm. Sup\'er. (4)},
+  FJOURNAL = {Annales Scientifiques de l'\'Ecole Normale Sup\'erieure.
+              Quatri\`eme S\'erie},
+    VOLUME = {51},
+      YEAR = {2018},
+    NUMBER = {3},
+     PAGES = {657--700},
+      ISSN = {0012-9593,1873-2151},
+   MRCLASS = {28A33 (30L05 51F99 53C23)},
+  MRNUMBER = {3831034},
+       DOI = {10.24033/asens.2363},
+       URL = {https://doi.org/10.24033/asens.2363},
+}
+
 @book {deza-lauren,
     AUTHOR = {Deza, M. and Laurent, M.},
      TITLE = {Geometry of cuts and metrics},
