--- a/4-point.tex
+++ b/4-point.tex
@@ -428,8 +428,8 @@ Passing to the limit as $\gamma\to 0$ in the inequality \ref{eq:trig-inq}$\,+\,\
 Note that if this inequality holds for all $\alpha\in (0,1)$ (or $\alpha\in (1,\infty)$) then we get
 a point-on-side comparison for nonnegative (respectively nonpositive) curvature in the sense of Alexandrov \cite[8.14 and 9.14]{AKP-2024}.
 Indeed, for Euclidean space, equality in \ref{eq:CBB-CBA} holds for any $\alpha$.
-Therefore, if $\alpha<1$, we get $|x_3-x_4|\ge |\tilde x_3-\tilde x_4|$, where $\tilde x_4$ divides the side $[\tilde x_1\tilde x_2]$ of the model tirangle $[\tilde x_1\tilde x_2\tilde x_3]=\tilde\triangle(x_1x_2x_3)$ in the same ratio $\alpha:(1-\alpha)$.
-Similarly, if $\alpha>1$, we get $|x_3-x_1|\le |\tilde x_3-\tilde x_1|$, where $\tilde x_1$ divides the side $[\tilde x_4\tilde x_2]$ of the model tirangle $[\tilde x_4\tilde x_2\tilde x_3]=\tilde\triangle(x_4x_2x_3)$ in the same ratio $\alpha:1$.
+Therefore, if $\alpha<1$, we get $|x_3-x_4|\ge |\tilde x_3-\tilde x_4|$, where $\tilde x_4$ divides the side $[\tilde x_1\tilde x_2]$ of the model tirangle $[\tilde x_1\tilde x_2\tilde x_3]=\tilde\triangle(x_1x_2x_3)$ in the same ratio $(1-\alpha):\alpha$.
+Similarly, if $\alpha>1$, we get $|x_3-x_1|\le |\tilde x_3-\tilde x_1|$, where $\tilde x_1$ divides the side $[\tilde x_4\tilde x_2]$ of the model tirangle $[\tilde x_4\tilde x_2\tilde x_3]=\tilde\triangle(x_4x_2x_3)$ in the same ratio $(\alpha-1):1$.
 
 So far, we have obtained it for only one value of $\alpha$;
 however, applying iteration we can derive inequalities for the remaining values $\alpha\in (0,1)$ (respectively, $\alpha\in (1,\infty)$).
