--- a/4-point.tex
+++ b/4-point.tex
@@ -481,12 +481,14 @@ By \ref{cor:Four-point arrays}, $K_0$ describes all metrics on 4-point arrays in
 By \ref{lem:globalization},  $K$~includes $K_0$.
 
 Given $\delta>0$, consider all metrics with diameter at most $\delta$ on a 4-point array $\{x_1,x_2,x_3,x_4\}$ in an Alexandrov space with curvature at least $-1$.
-Note that due to Walds Theorem (see \cite[Exercise 10.7]{AKP-2024}) we can assume that the $4$-point array
-comes from a model $k$-plane\footnote{i.e, a complete simply connected 2-dimensional Riemannian manifold of constant curvature $k$.} with $k \ge -1$. This in particular implies that it is either (a) is isometric to a $4$-point subset of some sphere or (b) is bi-Lipshitz equivalent with the constant $1 + C \delta^2$ to a $4$-point subset of a Euclidean plane, where $C > 0$ is some absolute constant. Denote by $K_\delta\subset W_4$ the minimal closed convex cone that includes all associated forms of these metrics.
+Due to Wald's Theorem (see \cite[Exercise 10.7]{AKP-2024}) we can assume that the $4$-point array
+comes from a model $k$-plane (that is, a complete simply connected 2-dimensional Riemannian manifold of constant curvature $k$) with $k \ge -1$.
+This implies that the array either (a) is isometric to a $4$-point subset of some sphere or (b) is bi-Lipshitz equivalent with the constant $1 + C\cdot \delta^2$ to a $4$-point subset of a Euclidean plane, where $C > 0$ is some absolute constant.
+Denote by $K_\delta\subset W_4$ the minimal closed convex cone that includes all associated forms of these metrics.
 Note that $K_0\z\subset K_\delta$.
 Furthermore, 
 %after rescaling the metric on $\{x_1,x_2,x_3,x_4\}$ with %a factor of $\tfrac1\delta$, the array gets diameter at %most $1$ and is embeddable in an Alexandrov space with curvature at least $-\delta^2$; 
-any element of $K_\delta$ is bi-Lipshitz equivalent with the constant $1 + C \delta^2$ to some element of $K_0$;
+any element of $K_\delta$ is bi-Lipshitz equivalent with the constant $1 + C \cdot\delta^2$ to some element of $K_0$;
 therefore, $K_0=\bigcap_{\delta>0} K_\delta$.
 
 Every Riemannian manifold admits a local curvature bound at each point.
