--- a/4-point.tex
+++ b/4-point.tex
@@ -385,6 +385,21 @@ Indeed, passing to the ultracompletion, we may assume that $X$ is geodesic.
 Choose 4 points $x_1,x_2,x_3,x_5\in X$ and let $x_4$ be a point on a geodesic $[x_3x_5]$ that divides it in the same ratio as in the 5-point configuration in the plane.
 If we sum up the first inequality for arrays $x_1,x_2,x_3,x_4$ and $x_1,x_2,x_4,x_5$ with the appropriate coefficients, then we get the second inequality for $x_1,x_2,x_3,x_5$.
 
+{\color{blue}
+Namely, $x_4$ divides $[x_3x_5]$ in the ratio $1:\beta$.
+Therefore,
+\[\beta^2\cdot|x_3-x_5|^2 =\beta^2\cdot (1+\beta)\cdot|x_3-x_4|^2+\beta\cdot(1+\beta)\cdot|x_4-x_5|^2.\]
+It follows that
+\[L_2(x_1,x_2,x_3,x_5)
+=
+\beta\cdot(1+\beta)\cdot L_1(x_1,x_2,x_3,x_4)+ (1+\beta)\cdot L_1(x_1,x_2,x_4,x_5),\]
+where $L_i(p, q, r, s)$ denotes the left-hand side of the $i^{\text{th}}$ inequality \ref{eq:lambda}, corresponding to the array $p, q, r, s$.
+In particular, if $L_1 \le 0$ holds for every point array, then so does $L_2 \le 0$.
+}
+
+where $L_i(p,q,r,s)$ denotes the left-hand side in \ref{eq:lambda} the $i^{\text{th}}$ inequality and  the array $p,q,r,s$.
+In particular $L_1\le 0$ implies $L_2\le 0$ .
+
 By the claim, the inequality for $\lambda$-array $(\alpha\cdot (1-\beta),(1-\alpha)\cdot(1\z-\beta), \beta,-1)$ implies the inequality for the $\lambda$-array $(\alpha\cdot (1-\beta^2), (1-\alpha)\cdot(1-\beta^2), \beta^2,-1)$.
 Applying the claim several times, we get all the inequalities with $\lambda$-arrays
 \[(\alpha\cdot (1-\gamma),\  (1-\alpha)\cdot(1-\gamma),\ \gamma,\ -1),\]
