--- a/4-point.tex
+++ b/4-point.tex
@@ -393,7 +393,7 @@ It follows that
 \[L_2(x_1,x_2,x_3,x_5)
 =
 \beta\cdot(1+\beta)\cdot L_1(x_1,x_2,x_3,x_4)+ (1+\beta)\cdot L_1(x_1,x_2,x_4,x_5),\]
-where $L_i(p, q, r, s)$ denotes the left-hand side of the $i^{\text{th}}$ inequality \ref{eq:lambda}, corresponding to the array $p, q, r, s$.
+where $L_i(p, q, r, s)$ denotes the left-hand side of the $i^{\text{th}}$ inequality \ref{eq:lambda} for the array $p, q, r, s$.
 In particular, if $L_1 \le 0$ holds for every point array, then so does $L_2 \le 0$.
 }
 
