--- a/4-point.tex
+++ b/4-point.tex
@@ -394,13 +394,8 @@ It follows that
 =
 \beta\cdot(1+\beta)\cdot L_1(x_1,x_2,x_3,x_4)+ (1+\beta)\cdot L_1(x_1,x_2,x_4,x_5),\]
 where $L_i(p, q, r, s)$ denotes the left-hand side of the $i^{\text{th}}$ inequality \ref{eq:lambda} for the array $p, q, r, s$.
-In particular, if $L_1 \le 0$ holds for every point array, then so does $L_2 \le 0$.
-}
-
-where $L_i(p,q,r,s)$ denotes the left-hand side in \ref{eq:lambda} the $i^{\text{th}}$ inequality and  the array $p,q,r,s$.
-In particular $L_1\le 0$ implies $L_2\le 0$ .
-
-By the claim, the inequality for $\lambda$-array $(\alpha\cdot (1-\beta),(1-\alpha)\cdot(1\z-\beta), \beta,-1)$ implies the inequality for the $\lambda$-array $(\alpha\cdot (1-\beta^2), (1-\alpha)\cdot(1-\beta^2), \beta^2,-1)$.
+In particular, if $L_1 \le 0$ holds for every point array, then so does} $L_2 \le 0$.
+That is, the inequality for $\lambda$-array $(\alpha\cdot (1-\beta),(1-\alpha)\cdot(1\z-\beta), \beta,-1)$ implies the inequality for the $\lambda$-array $(\alpha\cdot (1-\beta^2), (1-\alpha)\cdot(1-\beta^2), \beta^2,-1)$.
 Applying the claim several times, we get all the inequalities with $\lambda$-arrays
 \[(\alpha\cdot (1-\gamma),\  (1-\alpha)\cdot(1-\gamma),\ \gamma,\ -1),\]
 where $\gamma=\beta^{2^k}$ for an integer $k\ge 1$;
