--- a/4-point.tex
+++ b/4-point.tex
@@ -632,7 +632,7 @@ since otherwise $L_n'(x_1,x_2,x_3,x_{3+k})\le 0$, which would imply~\ref{eq:L<En
 Following calculations in Claim~\ref{clm:1=>2},
 we find that
 $L_n'(x_1,x_2,x_3,x_{3+k})$ can be written as a telescoping sum
-of $L_n(x_1,x_2,z_{2+i},z_{3+i})$ with appropriate positive coefficients;
+of $L_n(x_1,x_2,x_{2+i},x_{3+i})$ with appropriate positive coefficients;
 here $x_3,\dots,x_{3+k}$ are points on the geodesic $[x_3,x_{3+k}]$.
 Applying \ref{eq:L'=L+L}, we see that the coefficient in front of each $L_n(x_1,x_2,x_{2+i},x_{3+i})$ does not exceed $k$.
 Therefore,
