--- a/4-point.tex
+++ b/4-point.tex
@@ -649,15 +649,16 @@ It follows that
 \[
 E_n(x_1,x_2,x_{2+i})\le 100\cdot E_n(x_1,x_2,x_3)
 \]
-for all~$i$, and
-\[L_n'(x_1,x_2,x_3,x_4)\le 100\cdot 4^k\cdot \delta_n^2\cdot E_n(x_1,x_2,x_3).
+for all~$i$; hence
+\[L_n'(x_1,x_2,x_3,x_4)\le 100\cdot k^2\cdot \delta_n^2\cdot E_n(x_1,x_2,x_3).
 \]
 Furthermore, since $1>\beta_n\ge\beta_n^{k}\ge \theta$,
 we have $1-\beta_n^{k}\ge \tfrac k2\cdot(1-\beta_n)$, and hence
 \[
-4^{k}\cdot E_n(x_1,x_2,x_3)\le 10\cdot E_n'(x_1,x_2,x_3);
+k^2\cdot E_n(x_1,x_2,x_3)\le 10\cdot E_n'(x_1,x_2,x_3)
 \]
-that is, \ref{eq:L<En-hats} holds for $x_1,x_2,x_3,x_{3+k}$ --- a contradiction.
+for all large $n$.
+It follows that \ref{eq:L<En-hats} holds for $x_1,x_2,x_3,x_{3+k}$ --- a contradiction.
 \qeds
 
 
